<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="placeholder_tweet_body">This is a sample tweet for the Android Twitter app #Android #Twitter</string>
    <string name="placeholder_screenname">\@ravirani</string>
    <string name="placeholder_username">Ravi Rani</string>
    <string name="placeholder_timestamp">25m</string>
    <string name="action_create_new_tweet">New Tweet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tweet_button_text">Tweet</string>
    <string name="placeholder_compose_tweet">What\'s Happening?</string>
    <string name="tweet_count_default_text">140</string>
    <string name="action_view_profile">Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="placeholder_tweet_count">1\nTWEET</string>
    <string name="placeholder_following_count">100\nFOLLOWING</string>
    <string name="placeholder_followers_count">120\nFOLLOWERS</string>
    <string name="placeholder_tagline">This is a tag line for the user</string>

</resources>