<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.ravcode.apps.twitterclient.ComposeTweetFragment">

    <LinearLayout
        android:id="@+id/llTweetMetaInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="@dimen/tweet_meta_info_container_width"
            android:layout_height="@dimen/tweet_meta_info_container_height"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_username"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvScreenName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="san-serif-light"
                android:text="@string/placeholder_screenname"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTweetCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:fontFamily="san-serif-light"
            android:padding="10dp"
            android:text="@string/tweet_count_default_text"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/tweet_meta_info_container_height"
            android:background="@drawable/tweet_button"
            android:fontFamily="san-serif-light"
            android:id="@+id/btTweet"
            android:text="@string/tweet_button_text"
            android:textColor="@android:color/white" />

    </LinearLayout>


    <EditText
        android:id="@+id/etTweetText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/llTweetMetaInfo"
        android:layout_marginTop="10dp"
        android:fontFamily="san-serif-light"
        android:gravity="top"
        android:hint="@string/placeholder_compose_tweet"
        android:maxLength="140"
        android:textSize="16sp">

        <requestFocus />
    </EditText>

</RelativeLayout>
