<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/ivProfileImage"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/llTweetMetaInfo"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_username"
            android:id="@+id/tvUserName"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tweet_meta_info_text_size"
            android:paddingRight="5dp"
            android:paddingEnd="5dp"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_screenname"
            android:fontFamily="san-serif-light"
            android:textSize="@dimen/tweet_meta_info_text_size"
            android:textColor="@android:color/darker_gray"
            android:ellipsize="end"
            android:maxLines="1"
            android:id="@+id/tvScreenName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="san-serif-light"
            android:textSize="@dimen/tweet_meta_info_text_size"
            android:textColor="@android:color/darker_gray"
            android:text="@string/placeholder_timestamp"
            android:id="@+id/tvTimestamp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_tweet_body"
        android:id="@+id/tvBody"
        android:fontFamily="san-serif-light"
        android:lineSpacingExtra="4sp"
        android:textSize="@dimen/tweet_body_text_size"
        android:textColor="@android:color/black"
        android:layout_below="@+id/llTweetMetaInfo"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
