<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ravcode.apps.twitterclient.activities.ProfileActivity">

    <ImageView
        android:id="@+id/ivProfileBackgroundImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_alignTop="@+id/rlHeader"
        android:layout_alignLeft="@+id/rlHeader"
        android:layout_alignStart="@+id/rlHeader"
        android:layout_alignRight="@+id/rlHeader"
        android:layout_alignEnd="@+id/rlHeader"
        android:layout_alignBottom="@+id/rlHeader"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/rlHeader"
        android:background="@android:color/darker_gray"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="@dimen/user_profile_width"
            android:layout_height="@dimen/user_profile_height"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_username"
            android:textSize="16sp"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tvScreenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="san-serif-light"
            android:textColor="@android:color/white"
            android:text="@string/placeholder_screenname"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvTagLine"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:fontFamily="san-serif-light"
            android:textColor="@android:color/white"
            android:text="@string/placeholder_tagline"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llCountsContainer"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_below="@+id/rlHeader"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTweetCount"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="san-serif-light"
            android:textColor="@android:color/darker_gray"
            android:text="@string/placeholder_tweet_count"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvFollowingCount"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="san-serif-light"
            android:textColor="@android:color/darker_gray"
            android:text="@string/placeholder_following_count"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvFollowersCount"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="san-serif-light"
            android:textColor="@android:color/darker_gray"
            android:text="@string/placeholder_followers_count"
            android:textSize="14sp" />

    </LinearLayout>

    <fragment
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="com.ravcode.apps.twitterclient.fragments.UserTimelineFragment"
        android:id="@+id/fragment"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/llCountsContainer"
        tools:layout="@layout/fragment_tweets_list"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
